re fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -331,7 +331,7 @@ button {
 
 .site-navbar ul {
     margin: 5%;
-    padding: 5%;
+    padding: 0;
     list-style: none;
     display: flex;
 }
